shopingkart/src/objects/Size__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Outfit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COLLAR_SIZE__c</fullName>
        <label>COLLAR SIZE</label>
        <picklist>
            <picklistValues>
                <fullName>14.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HEIGHT__c</fullName>
        <label>HEIGHT</label>
        <picklist>
            <picklistValues>
                <fullName>I DON&apos;T KNOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;04&apos;=1.61m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;05&apos;=1.64m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;06&apos;=1.66m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;07&apos;=1.69m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;08&apos;=1.71m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;09&apos;=1.74m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;10&apos;=1.77m</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5&apos;11&apos;=1.81m</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JACKET_SIZE__c</fullName>
        <label>JACKET SIZE</label>
        <picklist>
            <picklistValues>
                <fullName>I DON&apos;T KNOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SHOES__c</fullName>
        <label>SHOES</label>
        <picklist>
            <picklistValues>
                <fullName>I DON&apos;T KNOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6/40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7/41</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8/42</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9/43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10/44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11/46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1147</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Size__c</fullName>
        <label>Top Size</label>
        <picklist>
            <picklistValues>
                <fullName>i don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WAIST__c</fullName>
        <label>WAIST</label>
        <picklist>
            <picklistValues>
                <fullName>I DON&apos;T KNOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>37L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>39L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>41L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>42L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Size</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Outfit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Size</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>